# DOCx-edge-detection-

./: .gitignore  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DocumentDetector.cpp  document_detector.cpp
app/src/main/java/com/example/myapplication/: CameraScreen.kt  CroppingScreen.kt  DocumentProcessor.kt  MainActivity.kt
app/src/main/java/com/example/myapplication/detection/: DetectionModels.kt  DocQuadNetDetector.kt  HybridDetectionCoordinator.kt  LetterboxPreprocessor.kt  MLSDDetector.kt  MLSDSessionManager.kt  OnnxSessionManager.kt
app/src/main/java/com/example/myapplication/telemetry/: TelemetryCoordinator.kt
gradle/wrapper/: gradle-wrapper.properties
sdk/: .gitignore  build.gradle
